[gd_scene load_steps=2 format=3 uid="uid://bg3rgjjrtacnl"]

[ext_resource type="Script" path="res://SystemControls/system_test_controls.gd" id="1_parwl"]

[node name="SystemTestControls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_parwl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 163.0
offset_bottom = 111.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthTestBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Test Player Heal"

[node name="HurtTestBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Test Player Damage"

[node name="ScoreTestBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Test Score
"

[node name="EnemyHealthTestBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Test Enemy Health"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HealthTestBtn" to="." method="_on_health_test_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HurtTestBtn" to="." method="_on_hurt_test_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScoreTestBtn" to="." method="_on_score_test_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EnemyHealthTestBtn" to="." method="_on_enemy_health_test_btn_pressed"]
